--- a/templates/page1.html
+++ b/templates/page1.html
@@ -10,149 +10,12 @@
 
 <body>
     <header>
-        <h1>Titre</h1>
+        <h1>templates</h1>
     </header>
 
 
     <div id="container">
-        <nav>
-            <h3>MENU</h3>
-        </nav>
-        <main id="main">
-            <article>
-                <header>
-                    <h2>Titre article</h2>
-                </header>
-                <main>
-                    <ul>
-                        <li>Ligne 1</li>
-                        <li>Ligne 2</li>
-                        <li>Ligne 3</li>
-                        <li>Ligne 4</li>
-                    </ul>
-                </main>
-                <footer>
-                    <h6>footer article</h6>
-                </footer>
-            </article>
 
-            <article>
-                <header>
-                    <h2>Titre article</h2>
-                </header>
-                <main>
-                    <ul>
-                        <li>Ligne 1</li>
-                        <li>Ligne 2</li>
-                        <li>Ligne 3</li>
-                        <li>Ligne 4</li>
-                    </ul>
-                </main>
-                <footer>
-                    <h6>footer article</h6>
-                </footer>
-            </article>
-            <article>
-                <header>
-                    <h2>Titre article</h2>
-                </header>
-                <main>
-                    <ul>
-                        <li>Ligne 1</li>
-                        <li>Ligne 2</li>
-                        <li>Ligne 3</li>
-                        <li>Ligne 4</li>
-                    </ul>
-                </main>
-                <footer>
-                    <h6>footer article</h6>
-                </footer>
-            </article>
-            <article>
-                <header>
-                    <h2>Titre article</h2>
-                </header>
-                <main>
-                    <ul>
-                        <li>Ligne 1</li>
-                        <li>Ligne 2</li>
-                        <li>Ligne 3</li>
-                        <li>Ligne 4</li>
-                    </ul>
-                </main>
-                <footer>
-                    <h6>footer article</h6>
-                </footer>
-            </article>
-            <article>
-                <header>
-                    <h2>Titre article</h2>
-                </header>
-                <main>
-                    <ul>
-                        <li>Ligne 1</li>
-                        <li>Ligne 2</li>
-                        <li>Ligne 3</li>
-                        <li>Ligne 4</li>
-                    </ul>
-                </main>
-                <footer>
-                    <h6>footer article</h6>
-                </footer>
-            </article>
-            <article>
-                <header>
-                    <h2>Titre article</h2>
-                </header>
-                <main>
-                    <ul>
-                        <li>Ligne 1</li>
-                        <li>Ligne 2</li>
-                        <li>Ligne 3</li>
-                        <li>Ligne 4</li>
-                    </ul>
-                </main>
-                <footer>
-                    <h6>footer article</h6>
-                </footer>
-            </article>
-            <article>
-                <header>
-                    <h2>Titre article</h2>
-                </header>
-                <main>
-                    <ul>
-                        <li>Ligne 1</li>
-                        <li>Ligne 2</li>
-                        <li>Ligne 3</li>
-                        <li>Ligne 4</li>
-                    </ul>
-                </main>
-                <footer>
-                    <h6>footer article</h6>
-                </footer>
-            </article>
-            <article>
-                <header>
-                    <h2>Titre article</h2>
-                </header>
-                <main>
-                    <ul>
-                        <li>Ligne 1</li>
-                        <li>Ligne 2</li>
-                        <li>Ligne 3</li>
-                        <li>Ligne 4</li>
-                    </ul>
-                </main>
-                <footer>
-                    <h6>footer article</h6>
-                </footer>
-            </article>
-
-
-        </main>
-        <footer>
-        </footer>
     </div>
 
 </body>
