--- a/CSS/style.css
+++ b/CSS/style.css
@@ -7,6 +7,10 @@ h1 {
   font-size: 2rem;
 }
 
+li {
+  font-size: 2rem;
+}
+
 h3 {
   text-align: center;
 }
@@ -15,10 +19,6 @@ h3 {
   display: flex;
   height: 50rem;
   width: 60%;
-}
-
-#main__ul--a {
-  font-size: 5rem;
 }
 
 #main {
