--- a/position/position.css
+++ b/position/position.css
@@ -17,7 +17,10 @@
 }
 /********************************************/
 .boxes1 {
+  display: flex;
+  justify-content: space-between;
 }
+
 .Box1 {
   background-color: green;
 }
