--- a/CSS/style.css
+++ b/CSS/style.css
@@ -17,6 +17,14 @@ li {
   list-style: none;
   text-align: center;
 }
+li:hover {
+  transform: scale(1.3);
+  background-color: blue;
+  border: solid 2px blue;
+}
+a:hover {
+  color: orange;
+}
 
 a {
   color: rgb(0, 37, 198);
@@ -38,5 +46,5 @@ nav {
 }
 
 ul {
-  font-size: .5rem;
+  font-size: 0.5rem;
 }
