--- a/HTML/HTML.css
+++ b/HTML/HTML.css
@@ -57,3 +57,33 @@ html {
 .page-header {
   text-align: center;
 }
+
+@media screen and (min-width: 800px) {
+  .container {
+    border: solid 4px rgb(255, 0, 0);
+    background-color: rgb(142, 71, 71);
+    margin: auto 0% auto 0%;
+    margin: 10px;
+    width: 770px;
+  }
+  .main__section {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    border: solid 4px rgb(0, 0, 255);
+  }
+
+  .section__article--grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: repeat(5, 1fr);
+    background-color: green;
+  }
+
+  .section__article--titre {
+    grid-column: 1/3;
+    grid-row: 1;
+    height: 5rem;
+    background-color: aqua;
+  }
+}
