--- a/old/HTML.css
+++ b/old/HTML.css
@@ -6,6 +6,8 @@ html {
 .container {
   border: solid 4px rgb(255, 0, 0);
   background-color: rgb(142, 71, 71);
+  margin: auto 0% auto 0%;
+  margin: 10px;
   width: 385px;
 }
 
@@ -17,6 +19,7 @@ html {
 .page-footer {
   border: solid 4px rgb(0, 0, 0);
   background-color: rgb(0, 0, 0);
+  margin: 10px;
 }
 
 /* 2ieme niveau de balise */
@@ -24,7 +27,8 @@ html {
 .main__section {
   display: grid;
   grid-template-columns: 1fr;
-  border: solid 1px rgb(0, 0, 255);
+  height: 100vh;
+  border: solid 4px rgb(0, 0, 255);
   background-color: rgb(85, 85, 222);
 }
 
@@ -33,8 +37,9 @@ html {
 .section__article {
   display: flex;
   flex-direction: column;
-  border: solid 1px rgb(0, 0, 0);
-  margin: auto 0px auto 0px;
+  border: solid 4px rgb(0, 0, 0);
+  margin: auto 5px auto 5px;
+  background-color: rgb(0, 255, 0);
   width: 365px;
 }
 
@@ -53,57 +58,80 @@ html {
 .page-header {
   text-align: center;
 }
+
+.section__article--grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: repeat(4, 1fr);
+  background-color: green;
+}
+
 .section__article--titre {
   height: 5rem;
   background-color: aqua;
 }
+
 .section__article--leReste {
-  height: 20rem;
-  width: 100%;
-  background-color: rgb(255, 128, 0);
+  background-color: rgb(245, 183, 122);
 }
+
 .section__article--lesListes {
-  height: 5rem;
-  width: 100%;
-  background-color: rgb(255, 255, 255);
+  display: grid;
+  grid-template-rows: repeat(4, 1fr);
+  grid-template-columns: 1fr 1fr;
+  background-color: rgb(208, 255, 0);
 }
+
 .section__article--lesTableaux {
-  height: 25rem;
-  width: 100%;
+  height: 15rem;
   background-color: rgb(255, 200, 0);
 }
+
 @media screen and (min-width: 800px) {
   .container {
     border: solid 4px rgb(255, 0, 0);
     background-color: rgb(142, 71, 71);
     margin: auto 0% auto 0%;
-    margin: 0px;
+    margin: 10px;
     width: 770px;
   }
   .main__section {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: repeat(5, 1fr);
-    border: solid 1px rgb(0, 0, 255);
+    grid-template-rows: 1fr 1fr 1fr;
+    border: solid 4px rgb(0, 0, 255);
   }
+
+  .section__article--leReste {
+    display: grid;
+    grid-column: 2;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: repeat(5, 1fr);
+    background-color: green;
+  }
+
   .section__article--titre {
     grid-column: 1/3;
-    grid-row: 1/2;
-    background-color: rgb(0, 255, 255);
+    grid-row: 1;
+    height: 5rem;
+    background-color: aqua;
   }
+
+  .section__article--leReste {
+    grid-column: 2;
+    grid-row-start: 2;
+    background-color: rgb(1, 22, 255);
+  }
+
   .section__article--lesListes {
-    grid-column: 2/3;
-    grid-row: 1/3;
+    grid-column: 1;
+    grid-row-start: 3;
     background-color: rgb(255, 255, 255);
   }
-  .section__article--leReste {
-    grid-column: 2/3;
-    grid-row: 2/6;
-    background-color: rgb(255, 128, 0);
-  }
+
   .section__article--lesTableaux {
-    grid-column: 1/2;
-    grid-row: 2/3;
-    background-color: rgb(255, 200, 0);
+    grid-column: 1;
+    grid-row-start: 2;
+    background-color: rgb(255, 0, 0);
   }
 }
